--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -311,6 +311,10 @@ dl.article-info dd:hover > i {
 	margin-top: 0;
 }
 
+a [class^="icon-"], a [class*=" icon-"] {
+	text-decoration: none;
+}
+
 .icon-white, .nav > .active > a > [class^="icon-"], .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"] {
 	background-image: none;
 }
@@ -1099,6 +1103,7 @@ span.spacer{
 .icons-left{
 	float:left; 
 	min-height:16px;
+	margin-left: -20px;
 }
 #mod-finder-advanced{
 	clear: both;
@@ -1111,8 +1116,18 @@ span.spacer{
 .pagenav.disabled a {
     color: gray;
 }
-
-
+.category-module.nav li,
+.weblinks.nav li,
+.archive-module.nav li,
+.relateditems.nav li,
+.mostread.nav li,
+.categories-module.nav li,
+.latestnews.nav li {
+	 padding-left: 20px
+}
+.feed-link {
+	 display: inline-block;
+}
 /* Newsflash */
 
 div.newsflash a.readmore,
