--- a/code/css/1_template.css
+++ b/code/css/1_template.css
@@ -128,7 +128,8 @@ vertical-align: middle;
 zoom: 1;
 padding:10px;
 }
-#menu ul li a{
+#menu ul li a,
+#menu ul li span{
 display:block;
 text-decoration:none;
 position:relative;
@@ -158,7 +159,8 @@ white-space:nowrap;
 margin:0;
 padding:0;
 }
-#menu ul ul li a{
+#menu ul ul li a,
+#menu ul ul li span{
 padding:5px;
 font-size:12px;
 font-weight:normal;
