Removed classes for Joomla 2.5 compatibility

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -622,6 +622,12 @@ ul.nav-tabs li {
 	list-style: none;
 }
 
+ul.nav-tabs.nav-stacked li {
+	float: none;
+	clear: both;
+	list-style: none;
+}
+
 dl#tabs,
 dl.tabs {
 	width: 100%;
