Added 3.0 compatibility with classes, wright defaults (loading jQuery/Bootstrap from Joomla itself) and post-overrides

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -1,5 +1,5 @@
 /*
-Joomla 2.5 specific styles (copied from 1.7)
+Joomla 2.5 specific styles
 ====================================================
 Table of Contents:
 Ctrl/Cmd + F to find the @groups named below
