--- a/code/wright/parameters/assets/columns/columns.css
+++ b/code/wright/parameters/assets/columns/columns.css
@@ -6,3 +6,12 @@ div.columns select.columns { float: none; }
 #column_sidebar4 { background-color: #bbb; }
 #column_main { background-color: #ddd; }
 .column a { cursor: pointer; }
+
+div.col select {
+	width: 90%;
+}
+
+p#column_info,
+div#columns {
+	clear: both;
+}
