Hidden invisible elements

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -339,3 +339,11 @@ a.joomlashack {
 	bottom: 0;
 	position: absolute;
 }
+
+
+/* @ Various */
+
+.element-invisible {
+	display: none;
+	visibility: hidden;
+}
