--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -529,15 +529,15 @@ div.pagination ul li a:hover {
 	border: 1px solid #e0e0e0;
 	padding: 0 10px;
 }
-.panel h3{
-	background-image: url(../images/slider_max.png);
-	background-repeat: no-repeat;
-	background-position:right center;
-	padding: 5px;
-	margin-bottom: 0;
-	margin-left: -10px;
-	width: 101%;
-	box-shadow:  0 0 20px #e9e9e9 inset;
+.panel h3 {
+    background-image: url("../images/slider_max.png");
+    background-position: 98% center;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 20px #E9E9E9 inset;
+    margin-bottom: 0;
+    margin-left: -10px;
+    padding: 5px;
+    width: 98%;
 }
 .panel h3.pane-toggler-down{
 	background-image: url(../images/slider_minus.png);
