--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -525,13 +525,18 @@ div.pagination ul li a:hover {
 	box-shadow: 0 0 5px #999;
 }
 /* Tabs */
-#tabs + div.current{
+dl.tabs{
+	margin-bottom: 0;
+}
+#tabs + div.current,
+.tabs + div.current{
 	border: 1px solid #999;
 	box-shadow: 0 0 50px #e9e9e9 inset;
 	clear: both;
 }
 
-dl#tabs dt{
+dl#tabs dt,
+dl.tabs dt{
 	clear: right;
 	width: auto;
 	padding: 5px;
@@ -541,19 +546,29 @@ dl#tabs dt{
 	margin: 5px 5px 0 0;
 	box-shadow: 0 0 20px #e9e9e9 inset;
 }
-dl#tabs dt h3{
+dl#tabs dt h3,
+dl.tabs dt h3{
 	margin-bottom: 0;
 }
 .current dd{
 	padding: 0 10px;
 }
 dl#tabs dt:hover,
-dl#tabs dt.open{
+dl#tabs dt.open,
+dl.tabs dt:hover,
+dl.tabs dt.open{
 	box-shadow: 0 0 20px #fff inset;
 }
 
-dl#tabs dt.open a{
+dl#tabs dt.open a,
+dl.tabs dt.open a{
 	color: #aaa;
+}
+
+.contact dt.tabs{
+	display: inline-block;
+	float:none;
+	width: auto;
 }
 /* Slider */
 
