--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -38,7 +38,8 @@ dl.article-info {
 	display:block;
 	width:100%;
 	min-height:20px;
-	margin:20px 0;
+	margin: 0;
+	padding:0;
 	font-size:1em;
 }
 dl.article-info dt {
@@ -50,7 +51,7 @@ dl.article-info dd {
 	clear:none;
 	zoom:1;
 	margin:0 10px 0 0;
-	padding:0 0 0 20px;
+	padding:0;
 	width:auto;
 }
 dl.article-info dd.parent-category-name,
