--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -609,5 +609,12 @@ div#pathway span.sep img {
 	display: none;
 }
 
+/* Text selection */
 
-::selection { background:rgb(255,255,0); }
+::selection {
+	background:rgb(255,255,0);
+}
+
+::-moz-selection {
+	background: rgb(255,255,0);
+}
