--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -273,7 +273,7 @@ div.categories-list span.item-title, div.cat-children span.item-title {
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
     background-color: #CCCCCC;
-    border-color: #CCCCCC;
+    border-color:#F5F5F5;
     border-image: none;
     border-radius: 4px 4px 0 0;
     border-style: solid;
@@ -324,7 +324,11 @@ div.categories-list span.item-title, div.cat-children span.item-title {
 }
 
 div.pagination p.counter {
-	padding: 10px 0 0 10px; 
+	color: #999;
+	display: block;
+	float: left;
+	line-height: 40px;
+	margin-right: 10px;
 }
 
 
@@ -383,4 +387,7 @@ a.joomlashack {
 
 .breadcrumb {
 	margin: 0;
+}
+.items-more{
+	margin-top: 10px;
 }
