--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -299,7 +299,7 @@ ul.actions li {
 	-khtml-border-radius: 5px;
 	border-top: 1px solid #eee;
 }
-.pagination .pagination{
+.pagination .pagination {
 	border-radius:0 0 0 0;
 	border-top:0 none;
 }
@@ -620,4 +620,16 @@ div#pathway span.sep img {
 
 ::-moz-selection {
 	background: rgb(255,255,0);
+}
+/** module menu in sidebar */
+ul.menu {
+	list-style: none;
+	margin: 0;
+}
+aside ul.menu ul li{
+	margin-left: 10px;	
+}
+ul.menu ul{
+    list-style:none;
+    margin:5px;
 }
