--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -677,3 +677,15 @@ div#pathway span.sep img {
 ::-moz-selection {
 	background: rgb(255,255,0);
 }
+/** module menu in sidebar */
+ul.menu {
+	list-style: none;
+	margin: 0;
+}
+aside ul.menu ul li{
+	margin-left: 10px;	
+}
+ul.menu ul{
+    list-style:none;
+    margin:5px;
+}
