space in menu tabs sidebar and  breadcrumbs margin bottom

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -1149,3 +1149,7 @@ div.newsflash_ms5 a.readmore {
 .moduletable, .module {
 	margin-bottom: 20px;
 }
+#breadcrumbs .module,
+#breadcrumbs .moduletable{
+	margin: 0;
+}
