--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -871,10 +871,7 @@ dl.label.label-info dt{
 .well h3{
     color: #999999;
     display: block;
-    font-size: 11px;
-    font-weight: bold;
     line-height: 18px;
-    padding: 3px 15px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     text-transform: uppercase;
 }
@@ -1152,4 +1149,7 @@ div.newsflash_ms5 a.readmore {
 #breadcrumbs .module,
 #breadcrumbs .moduletable{
 	margin: 0;
+}
+.blog-featured{
+	clear:both;
 }
