--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -689,3 +689,10 @@ ul.menu ul{
     list-style:none;
     margin:5px;
 }
+.items-more{
+	padding:0;
+	margin: 0;
+}
+.items-more .items-more{
+	border:0 none;
+}
