--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -39,7 +39,7 @@ dl.article-info {
 	width:100%;
 	min-height:20px;
 	margin: 0;
-	padding:0;
+	padding:5px 0;
 	font-size:1em;
 }
 dl.article-info dt {
@@ -695,4 +695,8 @@ ul.menu ul{
 }
 .items-more .items-more{
 	border:0 none;
+}
+.random-image > img{
+	width: 100%;
+	height: auto;
 }
