--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -277,7 +277,7 @@ dl.article-info {
 	min-height:20px;
 	margin:0;
 	font-size:0.8em;
-	padding: 0;
+	padding:5px 0;
 	list-style: none;
 }
 dl.article-info dt {
@@ -474,7 +474,7 @@ span.content_vote {
 /* Print & PDF Icons *************************************************************/
 ul.actions{
 	float: right;
-	margin-top: 10px;
+	margin-top: 6px;
 	padding: 0;
 }
 ul.actions li {
