Title of arctlicles newflash in joomla 2. & 3.0

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -640,3 +640,10 @@ ul.menu ul{
 .items-more ul{
 	margin:0;
 }
+.newsflash-title_ms1,
+.newsflash-title_ms2,
+.newsflash-title_ms3,
+.newsflash-title_ms4,
+.newsflash-title{
+	margin-top: 10px;
+}
