--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -703,3 +703,10 @@ ul.menu ul{
 	width: 100%;
 	height: auto;
 }
+.newsflash-title_ms1,
+.newsflash-title_ms2,
+.newsflash-title_ms3,
+.newsflash-title_ms4,
+.newsflash-title{
+	margin-top: 10px;
+}
