Imge intro and full in joomla 2.5 , title newsflash in joomla 3.0

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -428,3 +428,10 @@ aside .nav.menu.nav-tabs{
 }.aside input {
 	width:93%;
 }
+.newsflash-title_ms1,
+.newsflash-title_ms2,
+.newsflash-title_ms3,
+.newsflash-title_ms4,
+.newsflash-title{
+	margin-top: 10px;
+}
