--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -1,23 +1,22 @@
 /*
-Joomla 3.0 specific styles
-====================================================
-Table of Contents:
-Ctrl/Cmd + F to find the @groups named below
+ Joomla 3.0 specific styles
+ ====================================================
+ Table of Contents:
+ Ctrl/Cmd + F to find the @groups named below
 
-@group HTML
-@group Toolbar
-@group Menu
-@group Icons
+ @group HTML
+ @group Toolbar
+ @group Menu
+ @group Icons
 
-*/
-
+ */
 
 /* @group HTML */
 
 html {
 	height: 100%;
 }
-body{
+body {
 	min-height: 100%;
 	position: relative;
 }
@@ -33,55 +32,51 @@ p.img_caption {
 }
 /* TEMPLATE SPECIFIC CSS CODE */
 #header {
-	background:#FFF;
-	margin-bottom: 10px; 
+	background: #FFF;
+	margin-bottom: 10px;
 }
-#header #logo h2 { display: none; }
-#pathway{
-	background:#FFF;
+#header #logo h2 {
+	display: none;
 }
-#stage{
-	border-bottom:1px solid #E0E0E0;
-	background:#F8F8F8;
+#pathway {
+	background: #FFF;
 }
-.elements{
-	border-bottom:1px solid #CCC;
-	background:#FFF;
+#stage {
+	border-bottom: 1px solid #E0E0E0;
+	background: #F8F8F8;
 }
-#container{
-	border-bottom:1px solid #CCC;
-	background:#FFF;
+.elements {
+	border-bottom: 1px solid #CCC;
+	background: #FFF;
 }
-
+#container {
+	border-bottom: 1px solid #CCC;
+	background: #FFF;
+}
 
 /* CONTENT BUTTONS */
-.btn-group.actions .btn img { height: 16px; }
+.btn-group.actions .btn img {
+	height: 16px;
+}
 
 /* @ Images and links */
 
-.img-intro-left,
-.img-fulltext-left,
-.pull-left.item-image {
+.img-intro-left, .img-fulltext-left, .pull-left.item-image {
 	float: left;
 	margin: 0 25px 10px 0;
 }
 
-.img-intro-right,
-.img-fulltext-right,
-.pull-right.item-image {
+.img-intro-right, .img-fulltext-right, .pull-right.item-image {
 	float: right;
 	margin: 0 0 10px 25px;
 }
-.img-fulltext-none, .img-intro-none{
+.img-fulltext-none, .img-intro-none {
 	margin-bottom: 10px;
 }
 
-p.img_caption,
-.item p.img_caption,
-.item-page p.img_caption {
+p.img_caption, .item p.img_caption, .item-page p.img_caption {
 	clear: none;
 }
-
 
 /* @group Toolbar */
 
@@ -93,10 +88,10 @@ nav div.toolbar {
 	padding-left: 40px;
 	padding-right: 40px;
 }
-.toolbar.container{
+.toolbar.container {
 	margin-left: 10px;
 }
-.wrapper-toolbar{
+.wrapper-toolbar {
 	min-height: 40px;
 }
 
@@ -107,39 +102,37 @@ nav div.toolbar {
 	line-height: inherit;
 }
 .dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
+	left: 100%;
+	position: absolute;
+	top: 0;
+	visibility: hidden;
+	margin-top: -1px;
 }
 
-.dropdown-menu li > span:hover,
-.dropdown-menu .active > span{
+.dropdown-menu li > span:hover, .dropdown-menu .active > span {
 	background-color: #0081C2;
-    background-image: -moz-linear-gradient(center top , #0088CC, #0077B3);
-    background-repeat: repeat-x;
-    color: #FFFFFF;
-    outline: 0 none;
-    text-decoration: none;
+	background-image: -moz-linear-gradient(center top , #0088CC, #0077B3);
+	background-repeat: repeat-x;
+	color: #FFFFFF;
+	outline: 0 none;
+	text-decoration: none;
 }
 
-.dropdown-menu a,
-.dropdown-menu span.separator {
-    clear: both;
-    display: block;
-    font-weight: normal;
-    line-height: 18px;
-    padding: 3px 15px;
-    white-space: nowrap;
+.dropdown-menu a, .dropdown-menu span.separator {
+	clear: both;
+	display: block;
+	font-weight: normal;
+	line-height: 18px;
+	padding: 3px 15px;
+	white-space: nowrap;
 }
 
 .dropdown-menu li:hover > .sub-menu {
-    visibility: visible;
+	visibility: visible;
 }
 
 .dropdown:hover > .dropdown-menu {
-    display: block;
+	display: block;
 }
 
 .nav-tabs {
@@ -147,62 +140,59 @@ nav div.toolbar {
 }
 
 .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
-    margin-top: 0;
+	margin-top: 0;
 }
 
 .navbar .sub-menu:before {
-    border-bottom: 7px solid transparent;
-    border-left: none;
-    border-right: 7px solid rgba(0, 0, 0, 0.2);
-    border-top: 7px solid transparent;
-    left: -7px;
-    top: 10px;
+	border-bottom: 7px solid transparent;
+	border-left: none;
+	border-right: 7px solid rgba(0, 0, 0, 0.2);
+	border-top: 7px solid transparent;
+	left: -7px;
+	top: 10px;
 }
 .navbar .sub-menu:after {
-    border-top: 6px solid transparent;
-    border-left: none;
-    border-right: 6px solid #fff;
-    border-bottom: 6px solid transparent;
-    left: 10px;
-    top: 11px;
-    left: -6px;
+	border-top: 6px solid transparent;
+	border-left: none;
+	border-right: 6px solid #fff;
+	border-bottom: 6px solid transparent;
+	left: 10px;
+	top: 11px;
+	left: -6px;
 }
 
 .navbar a.dropdown-toggle i {
-    height: 100%;
-    line-height: 100%;
-    vertical-align: baseline;
+	height: 100%;
+	line-height: 100%;
+	vertical-align: baseline;
 }
 
 .nav > li > span.separator {
-    display: block;
-    cursor: default;
+	display: block;
+	cursor: default;
 }
 
 .navbar .nav > li > span.separator {
-    color: #555555;
-    float: none;
-    padding: 10px 15px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 #FFFFFF;
+	color: #555555;
+	float: none;
+	padding: 10px 15px;
+	text-decoration: none;
+	text-shadow: 0 1px 0 #FFFFFF;
 }
 
 .navbar .nav > .active > span.separator, .navbar .nav > .active > span.separator:hover, .navbar .nav > .active > span.separator:focus {
-    background-color: #E5E5E5;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125) inset;
-    color: #555555;
-    text-decoration: none;
+	background-color: #E5E5E5;
+	box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125) inset;
+	color: #555555;
+	text-decoration: none;
 }
-.dropdown-menu .active  > a, .dropdown-menu .active  > a:hover
-{
+.dropdown-menu .active > a, .dropdown-menu .active > a:hover {
 	color: white;
 }
 
-
-
 /* @ Icons   */
 
-[class^="icon-"], [class*=" icon-"]{
+[class^="icon-"], [class*=" icon-"] {
 	background-image: none;
 	width: auto;
 	height: auto;
@@ -218,135 +208,133 @@ a [class^="icon-"], a [class*=" icon-"] {
 	background-image: none;
 }
 
-
 /*  @ Categories */
 
 div.categories-list li.first, div.cat-children li.first, div.cat-children li.last {
-    margin-left: 0;
+	margin-left: 0;
 }
 
 div.categories-list ul, div.categories-list li, div.cat-children ul, div.cat-children li {
-    list-style: none outside none;
-    margin: 0;
-    padding: 0;
+	list-style: none outside none;
+	margin: 0;
+	padding: 0;
 }
 
 div.cat-children li, div.categories-list li {
-    border-bottom: 1px solid #EEEEEE;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+	border-bottom: 1px solid #EEEEEE;
+	margin-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 div.categories-list span.item-title, div.cat-children span.item-title {
-    font-size: 18px;
+	font-size: 18px;
 }
 
 /* @ Search */
 
 .result-title {
-    font-size: 18px;
+	font-size: 18px;
 }
 
 .result-created {
-    color: #999999;
-    font-size: 11px;
+	color: #999999;
+	font-size: 11px;
 }
 
 .result-category, .result-text, .result-title {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .result-title {
-    border-top: 1px solid #EEEEEE;
-    font-size: 18px;
-    margin-bottom: 10px;
-    margin-top: 20px;
-    padding-top: 10px;
+	border-top: 1px solid #EEEEEE;
+	font-size: 18px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	padding-top: 10px;
 }
 
 /* @ Tabs */
 
 .nav-tabs {
-    border-bottom: 2px solid #DDDDDD;
+	border-bottom: 2px solid #DDDDDD;
 }
 
 .nav-tabs > .open  a {
 	background-color: #FFFFFF;
-    border-color: #DDDDDD #DDDDDD transparent;
-    border-style: solid;
-    border-width: 1px;
-    color: #555555;
-    cursor: default;	
+	border-color: #DDDDDD #DDDDDD transparent;
+	border-style: solid;
+	border-width: 1px;
+	color: #555555;
+	cursor: default;
 }
 .nav-tabs .tabs a {
-    border: 1px solid #ccc;
-    background-color:#ccc;
-    border-bottom:4px solid #ccc;
-    border-radius: 4px 4px 0 0;
-    line-height: 18px;
-    padding-top: 8px;
+	border: 1px solid #ccc;
+	background-color: #ccc;
+	border-bottom: 4px solid #ccc;
+	border-radius: 4px 4px 0 0;
+	line-height: 18px;
+	padding-top: 8px;
 }
 .nav-tabs .tabs a, .nav-pills .tabs a {
-    line-height: 14px;
-    margin-right: 2px;
-    padding-left: 12px;
-    padding-right: 12px;
+	line-height: 14px;
+	margin-right: 2px;
+	padding-left: 12px;
+	padding-right: 12px;
 }
 .nav-tabs li a {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    background-color: #CCCCCC;
-    border-color:#F5F5F5;
-    border-image: none;
-    border-radius: 4px 4px 0 0;
-    border-style: solid;
-    border-width: 1px 1px 4px;
-    line-height: 18px;
-    padding-top: 8px;
+	-moz-border-bottom-colors: none;
+	-moz-border-left-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-top-colors: none;
+	background-color: #CCCCCC;
+	border-color: #F5F5F5;
+	border-image: none;
+	border-radius: 4px 4px 0 0;
+	border-style: solid;
+	border-width: 1px 1px 4px;
+	line-height: 18px;
+	padding-top: 8px;
 }
 
 /* @ Categories */
 
 .list-striped, .row-striped {
-    border-top: 1px solid #DDDDDD;
-    line-height: 18px;
-    list-style: none outside none;
-    margin-left: 0;
-    text-align: left;
-    vertical-align: middle;
+	border-top: 1px solid #DDDDDD;
+	line-height: 18px;
+	list-style: none outside none;
+	margin-left: 0;
+	text-align: left;
+	vertical-align: middle;
 }
 
 .list-striped li:nth-child(2n+1), .list-striped dd:nth-child(2n+1), .row-striped .row:nth-child(2n+1), .row-striped .row-fluid:nth-child(2n+1) {
-    background-color: #F9F9F9;
+	background-color: #F9F9F9;
 }
 .list-condensed li {
-    padding: 4px 5px;
-    overflow: hidden;
-}    
-.list-striped li, .list-striped dd, .row-striped .row, .row-striped .row-fluid {
-    border-bottom: 1px solid #DDDDDD;
-    padding: 8px;
+	padding: 4px 5px;
+	overflow: hidden;
 }
-
+.list-striped li, .list-striped dd, .row-striped .row, .row-striped .row-fluid {
+	border-bottom: 1px solid #DDDDDD;
+	padding: 8px;
+}
 
 /* @ Pagination */
 
 .pagination {
-    border-radius: 5px 5px 5px 5px;
-    display: table;
-    font-size: 12px;
-    margin: 10px auto 20px;
-    text-align: center;
+	border-radius: 5px 5px 5px 5px;
+	display: table;
+	font-size: 12px;
+	margin: 10px auto 20px;
+	text-align: center;
 }
 
 .pagenav.disabled a {
-    color: gray;
+	color: gray;
 }
 
 .pagination li:first-child span {
-    border-left-width: 0;
+	border-left-width: 0;
 }
 
 div.pagination p.counter {
@@ -357,40 +345,38 @@ div.pagination p.counter {
 	margin-right: 10px;
 }
 
-
 /* @ Images and links */
-
 
 /* @ Footer **************************************/
 
 .footer1, .footer2 {
-    text-align: center;
+	text-align: center;
 }
 
 a.joomlashack {
-    display: block;
-    margin: 10px auto;
-    text-align: center;
-    text-indent: -1000em;
-    width: 75px;
-    background: url("../images/jscright.png") no-repeat scroll 0 0 transparent;
+	display: block;
+	margin: 10px auto;
+	text-align: center;
+	text-indent: -1000em;
+	width: 75px;
+	background: url("../images/jscright.png") no-repeat scroll 0 0 transparent;
 }
 
-
-#footer a:hover{
+#footer a:hover {
 	color: gray;
 }
-#footer{
-	color:#fff;
-	overflow:hidden;
-	background-color:#1b1b1b;
-	background-image:-moz-linear-gradient(top,#222,#111);
-	background-image:-webkit-gradient(linear,0 0,0 100%,from(#222),to(#111));
-	background-image:-webkit-linear-gradient(top,#222,#111);
-	background-image:-o-linear-gradient(top,#222,#111);
-	background-image:linear-gradient(to bottom,#222,#111);
-	background-repeat:repeat-x;border-color:#252525;
-	filter:progid:dximagetransform.microsoft.gradient(startColorstr='#ff222222',endColorstr='#ff111111',GradientType=0)
+#footer {
+	color: #fff;
+	overflow: hidden;
+	background-color: #1b1b1b;
+	background-image: -moz-linear-gradient(top,#222,#111);
+	background-image: -webkit-gradient(linear,0 0,0 100%,from(#222),to(#111));
+	background-image: -webkit-linear-gradient(top,#222,#111);
+	background-image: -o-linear-gradient(top,#222,#111);
+	background-image: linear-gradient(to bottom,#222,#111);
+	background-repeat: repeat-x;
+	border-color: #252525;
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff222222',endColorstr='#ff111111',GradientType=0)
 }
 
 #footer.sticky {
@@ -398,7 +384,6 @@ a.joomlashack {
 	bottom: 0;
 	position: absolute;
 }
-
 
 /* @ Various */
 
@@ -410,28 +395,34 @@ a.joomlashack {
 .breadcrumb {
 	margin: 0;
 }
-.items-more{
+.items-more {
 	margin-top: 10px;
 }
-.moduletable,.module{
+.moduletable, .module {
 	margin-bottom: 20px;
 }
-#breadcrumbs .module,
-#breadcrumbs .moduletable{
+#breadcrumbs .module, #breadcrumbs .moduletable {
 	margin: 0;
 }
-.blog-featured{
-	clear:both;
+.blog-featured {
+	clear: both;
 }
-aside .nav.menu.nav-tabs{
-	float:none;
-}.aside input {
-	width:93%;
+aside .nav.menu.nav-tabs {
+	float: none;
 }
-.newsflash-title_ms1,
-.newsflash-title_ms2,
-.newsflash-title_ms3,
-.newsflash-title_ms4,
-.newsflash-title{
+.aside input {
+	width: 93%;
+}
+.newsflash-title_ms1, .newsflash-title_ms2, .newsflash-title_ms3, .newsflash-title_ms4, .newsflash-title {
 	margin-top: 10px;
+}
+.page-header{
+	padding-bottom:0;
+	margin: 0;
+}
+.well h3{
+	margin: 0;
+}
+.well ul.well,.well form{
+	margin-bottom: 0;
 }
