Style default of above-content and font-size of  Shackslides

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -63,8 +63,7 @@ p.img_caption {
 
 
 /* positions margins */
-#toolbar, #header, #menu, #featured, #grid-top, #main-content, 
-#above-content, #breadcrumbs, #grid-bottom, #grid-bottom2, 
+#toolbar, #header, #menu, #featured, #grid-top, #main-content, #breadcrumbs, #grid-bottom, #grid-bottom2, 
 #bottom-menu {
 	margin-bottom: 10px;  
 }
@@ -1171,4 +1170,15 @@ aside input {
 }
 .img-fulltext-none, .img-intro-none{
 	margin-bottom: 10px;
+}
+
+div#above-content.clearfix {
+padding-bottom: 30px;
+margin-bottom: 20px;
+border-bottom: 3px solid #D8D8D8;
+}
+
+#sliderContainer div.slidermanDescriptionCont div.slidermanDescriptionText div.slideTitle p {
+font-size: 1.1em;
+line-height: 14px;
 }
