--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -274,6 +274,7 @@ div.categories-list span.item-title, div.cat-children span.item-title {
 	border-radius: 4px 4px 0 0;
 	line-height: 18px;
 	padding-top: 8px;
+    font-size: .7em;
 }
 .nav-tabs .tabs a, .nav-pills .tabs a {
 	line-height: 14px;
