--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -940,6 +940,7 @@ dl.label.label-info dt{
 	background-color: #FFFFFF;
     border-color: #DDDDDD #DDDDDD transparent;
     border-style: solid;
+    padding-bottom:1px;
     border-width: 1px;
     color: #555555 !important;
     cursor: default;	
