tabs in joomla 2.5 padding add for items

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -949,7 +949,9 @@ dl.label.label-info dt{
 	border-radius:5px 5px 0 0; 
 	margin-right: 5px;
 	padding-left: 5px;
-	padding-right: 5px;
+	padding-top: 3px;
+	padding-bottom:1px;
+	font-size: .7em;
 }
 .tabs.nav.nav-tabs dt.tabs {
 	float: left;
