--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -1228,3 +1228,13 @@ p.readmore{
 	padding: 0;
 	margin: 20px 0 20px;
 }
+.img-polaroid{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing:border-box;
+	-ms-box-sizing:border-box;
+	-o-box-sizing:border-box;
+	box-sizing: border-box;
+}
+.hide-text{
+	display: none;
+}
