--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -357,6 +357,17 @@ dl.article-info dd [class^="icon-"], dl.article-info dd [class*=" icon-"] {
 
 /* @group Categories/Archives *****************************************/
 
+/* Clearfix style applied for li's in categories view, to ensure closing floated images */
+div.categories-list > ul li:after {
+    clear: both;
+}
+div.categories-list > ul li:before, div.categories-list > ul li:after {
+    content: "";
+    display: table;
+    line-height: 0;
+}
+
+
 div.categories-list ul, 
 div.categories-list li,
 div.cat-children li {
