--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -957,7 +957,7 @@ dl.label.label-info dt{
 .contact #selectForm{
 	margin-top: 10px;
 }
-.nav-tabs > .open  a {
+.nav-tabs > .open h3 a {
 	background-color: #FFFFFF;
     border-color: #DDDDDD #DDDDDD transparent;
     border-style: solid;
@@ -965,8 +965,7 @@ dl.label.label-info dt{
     color: #555555 !important;
     cursor: default;	
 }
-.nav-tabs a{
-	margin-right: 5px;
+.nav-tabs h3 a{
 	padding:4px 5px 1px;
 	vertical-align: bottom;
 }
@@ -1008,6 +1007,7 @@ dl.label.label-info dt{
 }
 .tabs.nav h3{
 	margin-bottom: 0;
+	margin-right: 5px;
 }
 #contact-slider dt h3{
 	margin-bottom: 0;
