--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -888,7 +888,10 @@ dl.label.label-info dt{
 	display: inline-block;
 	margin: 0;
 }
-
+.well{
+	box-sizing:border-box;
+	-ms-box-sizing:border-box;
+}
 .well h3{
     display: block;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
