--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -410,6 +410,12 @@ aside .nav.menu.nav-tabs {
 .aside input {
 	width: 93%;
 }
+aside input {
+	width:60%; 
+}
+label.finder{
+	margin-right: 3px;
+}
 .newsflash-title_ms1, .newsflash-title_ms2, .newsflash-title_ms3, .newsflash-title_ms4, .newsflash-title {
 	margin-top: 10px;
 }
