fix dropdownmenu on click parent item joomla 2.5 and 3.0

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -341,7 +341,9 @@ dl.article-info dd [class^="icon-"], dl.article-info dd [class*=" icon-"] {
 .navbar .nav li li.dropdown.open.active > .dropdown-toggle{
 	color: white;
 }
-
+.navbar .open > .dropdown-menu {
+	display: none;
+}
 
 /* @  Article   ***************************************/
 .item-page {
