Fixed logo adapter Fixed logo display when set to title only

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -40,7 +40,8 @@ p.img_caption {
 	background:#FFF;
 	margin-bottom: 10px; 
 }
-#header #logo h2 { display: none; }
+#header #logo a.image h2 { display: none; }
+
 #pathway{
 	background:#FFF;
 }
